--- a/index.html
+++ b/index.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>
-    <h1>
-        This is a header
-    </h1>
-    <p>
-        This is a paragraph
-    </p>
-    <p>
-        This is another paragraph
-    </p>
+    <h1>This is a header</h1>
 </body>
 </html>
